<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The MagPi</string>
    <string name="downloading">Downloading</string>
    <string name="menu_issues">Issues</string>
    <string name="menu_news">News</string>
    <string name="cancel">Cancel</string>
    <string name="share_news">Share news</string>
    <string name="share_issue">Share Issue</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_view">View</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_issues">Issues</string>
    <string name="settings_issues_desc">Notify when a new Issue appears</string>
    <string name="settings_news">News</string>
    <string name="settings_news_desc">Notify when new news appear</string>
    <string name="settings_about">About</string>
    <string name="settings_more">More</string>
    <string name="settings_visit">The MagPi website</string>
    <string name="buy_visit">Buy printed copies</string>
    <string name="about">About</string>
    <string name="about_app_longname">The MagPi for Android</string>
    <string name="about_andrea">Developed by Andrea Stagi</string>
    <string name="about_marta">Graphics by Marta Calistri</string>
    <string name="about_open">This app is an open source product, built upon the following open source projects</string>
    <string name="about_copyright">Copyright © 2014 The MagPi Limited. All the code is released under MIT license.</string>
    <string name="pdf_reader_required">You need to install a PDF reader first!</string>
    <string name="share_text">I just read issue %1$s of @TheMagP1 using their @Android app. Read it here today - %2$s</string>
    <string name="download_text">Downloading issue</string>
    <string name="download_completed_text">Download completed</string>
    <string name="menu_cancel">Cancel download</string>
    <string name="connection_error">Connection error</string>
    <string name="notification_new_issue">New issue!</string>
    <string name="download_folder">Download folder</string>
    <string name="settings_open_issuu">Open on ISSUU</string>
    <string name="settings_open_issuu_desc">Open your issue directly on ISSUU</string>

</resources>