<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_refresh"
        android:visible="false"
        android:showAsAction="ifRoom"
        android:title="@string/menu_refresh"
        android:icon="@drawable/ic_menu_refresh"/>
    
    <item
        android:id="@+id/menu_view"
        android:showAsAction="always"
        android:title="@string/menu_view"
        android:icon="@android:drawable/ic_menu_view"/>
    
    <item
        android:id="@+id/menu_cancel_download"
        android:visible="false"
        android:showAsAction="always"
        android:title="@string/menu_cancel"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"/>
    
    <item
        android:id="@+id/menu_share"
        android:showAsAction="always"
        android:title="@string/menu_share"
        android:icon="@android:drawable/ic_menu_share"/>

</menu>