<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/layout_root"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="20dip" >

            <TableRow android:gravity="center_vertical|center_horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dip"
                    android:src="@drawable/ic_launcher" />
            </TableRow>

            <TableRow android:gravity="center_vertical|center_horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/about_app_longname"
                    android:textColor="#000" />
            </TableRow>

            <TableRow android:gravity="center_vertical|center_horizontal" >

                <TextView
                    android:id="@+id/label_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text=""
                    android:textColor="#000" />
            </TableRow>
        </TableLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:background="#000" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/about_andrea"
                android:textColor="#000" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="10dip"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/about_marta"
                android:textColor="#000" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/about_open"
                android:textColor="#000"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="Android-rss"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dip"
                    android:autoLink="web"
                    android:gravity="center_vertical|center_horizontal"
                    android:linksClickable="true"
                    android:text="https://github.com/ahorn/android-rss"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="Async-http"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dip"
                    android:autoLink="web"
                    android:gravity="center_vertical|center_horizontal"
                    android:linksClickable="true"
                    android:text="http://loopj.com/android-async-http"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="AsynCache"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dip"
                    android:autoLink="web"
                    android:gravity="center_vertical|center_horizontal"
                    android:linksClickable="true"
                    android:text="https://github.com/atooma/AsynCache"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="ActionBarSherlock"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dip"
                    android:autoLink="web"
                    android:gravity="center_vertical|center_horizontal"
                    android:linksClickable="true"
                    android:text="http://actionbarsherlock.com"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="Universal Image Loader for Android"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dip"
                    android:autoLink="web"
                    android:gravity="center_vertical|center_horizontal"
                    android:linksClickable="true"
                    android:text="https://github.com/nostra13/Android-Universal-Image-Loader"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="GCM for Android"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dip"
                    android:autoLink="web"
                    android:gravity="center_vertical|center_horizontal"
                    android:linksClickable="true"
                    android:text="http://developer.android.com/google/gcm/gs.html#libs"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="Autoflight"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dip"
                    android:autoLink="web"
                    android:gravity="center_vertical|center_horizontal"
                    android:linksClickable="true"
                    android:text="https://github.com/atooma/autoflight"
                    android:textColor="#000" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="10dip"
            android:gravity="center_vertical|center_horizontal"
            android:text="Contributors"
            android:textColor="#000"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="10dip"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/app_contrib"
            android:textColor="#000" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:background="#000" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/about_copyright"
            android:textColor="#000" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:background="#000" />
    </LinearLayout>

</ScrollView>